# Sarvam-Programming-Assignment

./: README.md  pyproject.toml
Agentic/agentic/: main.py  main_streamlit.py
Agentic/agentic/index/: default__vector_store.json  docstore.json  index_store.json
Agentic/agentic/utils/: get_parsed_images.py  parser.py  schema.py
RAG/rag-system/: main.py  main_streamlit.py
RAG/rag-system/index/: default__vector_store.json  docstore.json  index_store.json
RAG/rag-system/utils/: schema.py
web-interface/: package-lock.json  package.json
web-interface/src/app/: layout.tsx  page.tsx
